Add working links to social media icons

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     </div>
     <div class = "links">
         <a href="https://www.instagram.com/donaldduckweekblad/" target="_blank"><img src="https://logodix.com/logo/1049796.jpg"> </a>
-        <a href="#" target="_blank"><img src="https://th.bing.com/th/id/OIP.7PF_T5X3rVne0gCLjwpoYQHaFj?pid=ImgDet&rs=1"> </a>
-        <a href="#" target="_blank"><img src="https://www.gannett-cdn.com/-mm-/ed7d0fccb8ea857c69bddcff119fe1b7711047d1/c=0-20-550-331&r=x1683&c=3200x1680/local/-/media/2017/02/27/USATODAY/USATODAY/636237985134519258-soundcloud-logo.jpg"></a>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="https://th.bing.com/th/id/OIP.7PF_T5X3rVne0gCLjwpoYQHaFj?pid=ImgDet&rs=1"> </a>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="https://www.gannett-cdn.com/-mm-/ed7d0fccb8ea857c69bddcff119fe1b7711047d1/c=0-20-550-331&r=x1683&c=3200x1680/local/-/media/2017/02/27/USATODAY/USATODAY/636237985134519258-soundcloud-logo.jpg"></a>
     </div>
 </body>
 </html>
